--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Things To Do</title>
+    <!-- Robot mono font embed -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700&display=swap&subset=greek" rel="stylesheet">
+    <!-- Stylesheets  -->
+    <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+    
 </head>
 <body>    
+    <header>
+        <input type="text" placeholder="Enter an activity..">
+        <button></button>
+    </header>
 </body>
 </html>
