buttons almost finished

--- a/app/index.html
+++ b/app/index.html
@@ -29,9 +29,13 @@
     <div class="container">
         <!-- completed tasks -->
         <ul class="todo">
-            <li>this is an item</li>
-            <li>this is an item</li>
-            <li>this is an item</li>
+            <li>
+                this is an item
+                <div class="buttons">
+                    <button></button>
+                    <button></button>
+                </div>
+            </li>
         </ul>
         <!-- uncompleted tasks -->
         <!--<ul class="todo">
