transition is not working on the 'done' button

--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
     </header>
     <div class="container">
         <!-- completed tasks -->
-        <ul class="todo">
+        <ul class="todo" id="completed">
             <li>
                 this is an item
                 <div class="buttons">
