--- a/app/index.html
+++ b/app/index.html
@@ -28,3 +28,7 @@
     <script src="resources/js/main.js"></script>
 </body>
 </html>
+<!--       _
+       .__(.)< (MEOW)
+        \___)   
+ ~~~~~~~~~~~~~~~~~~-->
